--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ div {
 	text-align: center;
 	width: 850px;
     height: 400px;
-    background-color: black;
+    background-color: pink;
 	color: white;
     position: absolute;
     top:0;
