--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ span {
 </style>
 <title>The Ride Never Ends</title>
 </head>
-<body bgcolor="#000000">
+<body bgcolor="pink">
 <div><span>
 Don't forget:<br>You're <a href='http://viewcount.neocities.org/therideneverends' target='_blank'>here</a> forever.
 </span>
