--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@ div {
 	font-size: 100px;
 	font-weight: bold;
 	text-align: center;
-	width: 850px;
+	width: 650px;
     height: 400px;
-    background-color: pink;
-	color: white;
+    background-color: white;
+	color: black;
     position: absolute;
     top:0;
     bottom: 0;
@@ -62,12 +62,12 @@ div {
 span {
   display: inline-block;
   vertical-align: middle;
-  line-height: 200px;
+  line-height: 130px;
 }
 </style>
 <title>The Ride Never Ends</title>
 </head>
-<body bgcolor="pink">
+<body bgcolor="white">
 <div><span>
 Don't forget:<br>You're <a href='http://viewcount.neocities.org/therideneverends' target='_blank'>here</a> forever.
 </span>
